<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_feed"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/feed" />
    
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />
    
    <item
        android:id="@+id/nav_list"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/list" />
    
    <item
        android:id="@+id/nav_rentals"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/rentals" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
